--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,13 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "openai": "^6.8.1",
     "pdf-parse": "^2.4.5",
+    "pdf-poppler": "^0.2.3",
+    "pdf-to-img": "^5.0.0",
     "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.4.394",
+    "sharp": "^0.34.5",
     "tesseract.js": "^6.0.1"
   }
 }
